--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -266,6 +266,7 @@
         </div>
       </div>
     </div>
+
   </section>
 
   <!-- end portfolio section -->
@@ -469,23 +470,23 @@
           </div>
         </div>
         <div class="col-md-5 col-lg-4 px-0">
-          <form action="">
+          <form action="" method="POST">
+            {% csrf_token %} <!--  -->
+            {{ form.as_p }}
             <div>
-              <input type="text" placeholder="Name" />
+              <input type="text" placeholder="Name" name="name"/>
             </div>
             <div>
-              <input type="email" placeholder="Email" />
+              <input type="gmail" placeholder="Gmail" name="gmail"/>
             </div>
             <div>
-              <input type="text" placeholder="Phone" />
+              <input type="text" placeholder="Phone" name="phone"/>
             </div>
             <div>
-              <input type="text" class="message-box" placeholder="Message" />
+              <input type="text" class="message-box" placeholder="Message" name="message"/>
             </div>
             <div class="d-flex ">
-              <button>
-                SEND
-              </button>
+              <button type="submit" name='send'>SEND</button>
             </div>
           </form>
         </div>
